[metadata]
name = bluetti_mqtt
version = 0.15.0
url = http://github.com/warhammerkid/bluetti_mqtt
author = Stephen Augenstein
author_email = perl.programmer@gmail.com
description = MQTT interface to Bluetti power stations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:
zip_safe = false
install_requires =
    aiomqtt>=2.5.1,<3
    bleak>=3.0.2,<4
    crcmod>=1.7,<2

[options.entry_points]
console_scripts =
    bluetti-discovery = bluetti_mqtt.discovery_cli:main
    bluetti-logger = bluetti_mqtt.logger_cli:main
    bluetti-mqtt = bluetti_mqtt.server_cli:main
